<resources>
    <string name="ChatApp">ChatApp</string>
    <string name="i_have_account">HESABIM VAR</string>
    <string name="create_new_account">YENİ HESAP OLUŞTUR</string>
    <string name="create_new_accountt">Yeni Hesap Oluştur</string>

    <string name="username">Kullanıcı Adı</string>
    <string name="email">E-Mail</string>
    <string name="parola">Parola</string>
    <string name="create_account">Hesap Oluştur</string>
    <string name="login_with_your_account">Hesabınızla Giriş Yapınız</string>
    <string name="btnLogin">Giriş Yap</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Çıkış Yap</string>
</resources>
