<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary"
    android:padding="20dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/welcome"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtWelcomeAppName"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/txtWelcomeAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ChatApp"
        android:textSize="75sp"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:fontFamily="cursive" />

    <Button
        android:id="@+id/btnWelcomeLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_have_account"
        android:background="@color/redButton"
        android:textColor="@android:color/white"
        android:layout_above="@+id/btnWelcomeRegister"
        android:layout_marginBottom="45dp" />

    <Button
        android:id="@+id/btnWelcomeRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:background="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"/>


</RelativeLayout>